[package]
name = "dioxus-use-mounted"
description = "Material design UI for Dioxus"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
dioxus = { git = "https://github.com/DioxusLabs/dioxus" }

[dev-dependencies]
dioxus-web = { git = "https://github.com/DioxusLabs/dioxus" }
