[package]
name = "dioxus-use-mounted"
description = "Dioxus hook to use a mounted element"
version = "0.3.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/dioxus-community/dioxus-use-mounted"

[dependencies]
dioxus-lib = "0.6"

[dev-dependencies]
dioxus = { version = "0.6", features = ["web"] }
